Remove horizontal scrolling issue and adjust logo sizing for larger screens

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -9,12 +9,12 @@
 
 /*Generic Styles*/
 
-
 body,
 html {
     display: flex;
     flex-direction: column;
     width: 100%;
+    max-width: 100%;
     min-height: 100vh;
     overflow-x: hidden;
     justify-content: center;
@@ -31,6 +31,8 @@ html {
     background-repeat: no-repeat;
 }
 
+/*Header Styles*/
+
 header {
     width: 100%;
     display: flex;
@@ -41,9 +43,10 @@ header {
 
 header img {
     max-width: 60%;
-    max-width: 200px;
+    max-width: 300px;
 }
 
+/*Quiz Game Styles*/
 .game-container {
     display: flex;
     flex-direction: column;
@@ -53,8 +56,11 @@ header img {
     width: 100%;
     height: 60vh;
     margin-top: 10vh;
+    max-width: 100%;
+    overflow-x: hidden;
 }
 
+/*Font Styles*/
 h2 {
     font-weight: 800;
     font-size: 5vw;
@@ -91,13 +97,13 @@ button:active {
 /* Media query for tablets and screens above 768px wide */
 @media (min-width: 768px) {
     header img {
-        max-width: 50%;
+        max-width: 70%;
     }
 }
 
 /* Media query for desktops and screens above 996px wide */
 @media (min-width: 996px) {
     header img {
-        max-width: 40%;
+        max-width: 80%;
     }
 }
